ui/tree/css/_tree.scss
@import 'extend';

.tview2 {
  white-space: normal;

  &-column {
    @extend %flex-wrap;
  }

  &-inline {
    @include padding-direction(7px, 3px, 7px, 7px);
  }

  move {
    @extend %move;

    @media (hover: none) {
      user-select: none;
    }

    &.inaccuracy {
      color: $c-inaccuracy;
      &:hover {
        background: $m-inaccuracy_bg--mix-30;
      }
    }
    &.mistake {
      color: $c-mistake;
      &:hover {
        background: $m-mistake_bg--mix-30;
      }
    }
    &.blunder {
      color: $c-blunder;
      &:hover {
        background: $m-blunder_bg--mix-30;
      }
    }
    &.good {
      color: $c-good;
      font-weight: bold;
      &:hover {
        background: $m-good_bg--mix-30;
      }
    }
    &.brilliant {
      color: $c-brilliant;
      font-weight: bold;
      &:hover {
        background: $m-brilliant_bg--mix-30;
      }
    }
    &.interesting {
      color: $c-interesting;
      font-weight: bold;
      &:hover {
        background: $m-interesting_bg--mix-30;
      }
    }
  }

  &-column move {
    font-size: 1.092em;
    padding: 0 2px;
  }

  &-inline move {
    padding: 0.25em 0.17em;
    white-space: nowrap;
    font-weight: bold;
  }

  move.parent {
    color: $c-primary;
  }

  comment a {
    vertical-align: top;
  }

  comment.truncated {
    cursor: pointer;
  }

  move.current {
    border: 1px solid $c-accent;
  }

  move.active {
    font-weight: bold;
    background: $m-primary_bg--mix-25;
    color: $c-font-clear;
  }

  &-inline move.active,
  line move.active {
    @extend %box-radius;
    background: $m-primary_bg--mix-40;
    color: $c-font-clearer;
    outline: 1px solid $m-primary_bg--mix-60;
  }

  move.nongame {
    font-style: italic;
  }

  move:not(.empty):not(.blunder):not(.mistake):not(.inaccuracy):not(.good):not(.brilliant):not(
      .interesting
    ):hover {
    &,
    index,
    eval {
      background: $c-primary;
      color: $c-over;
    }
  }

  &-inline move:hover {
    @extend %box-radius;
  }

  move.empty {
    color: $c-font-dimmer;
    cursor: default;
  }

  move index {
    font-size: 90%;
    color: $c-font-dim;
  }

  move.context-menu {
    background: $c-accent;
    color: $c-over;

    index {
      color: $c-over;
    }
  }

  &-column move index {
    padding-inline-start: 5px;
  }

  &-column move index:first-child {
    padding-inline-start: 0;
  }

  &-inline move index {
    padding-inline-end: 0.2em;
    line-height: 111.11%;
  }

  line move {
    color: $c-font;
  }

  &-column > move {
    flex: 0 0 43.5%;
    display: flex;
    font-size: 1.185em;
    line-height: 1.75em;
    padding: 0 0.3em 0 0.5em;
  }

  &-column > index + move {
    border-inline-end: $c-border;
  }

  eval {
    @extend %roboto;

    flex: 3 0 auto;
    text-align: right;
    font-size: 0.8em;
    color: $c-font-dim;
  }

  glyph {
    @extend %base-font;

    margin-inline-start: 0.08em;
    vertical-align: bottom;
  }

  shapes {
    font-size: 0.7em;
    margin-inline-start: 0.4em;
    text-align: right;
    color: $c-good;
    &::before {
      @extend %data-icon;
      content: $licon-DiscBigOutline;
    }
  }

  &-column > move glyph {
    flex: 0 1 auto;
    text-align: center;
    overflow: hidden;
    font-size: 0.82em;
  }

  &-column > index {
    flex: 0 0 13%;
    display: flex;
    justify-content: center;
    border-inline-end: $border;
    background: $c-bg-zebra;
    line-height: 2.07em;
    color: $c-font-dimmer;
  }

  > interrupt {
    font-size: 95%;
  }

  &-column > interrupt {
    flex: 0 0 100%;
    background: $c-bg-zebra;
    border-top: 1px solid $c-border;
    border-bottom: 1px solid $c-border;
    max-width: 100%;
  }

  &-column > interrupt > comment {
    @extend %break-word;

    display: block;
    padding: 3px 5px;
    &.inaccuracy {
      color: $c-inaccuracy;
    }
    &.mistake {
      color: $c-mistake;
    }
    &.blunder {
      color: $c-blunder;
    }
  }

  &-inline comment {
    vertical-align: 45%;
    word-wrap: break-word;
    margin: 0 0.2em 0 0.1em;
    font-size: 0.9em;
  }

  comment .by {
    @extend %nowrap-ellipsis, %roboto;

    display: inline-block;
    vertical-align: -0.3em;
    font-size: 0.9em;
    opacity: 0.8;
    margin-inline-end: 0.4em;
    max-width: 9em;
  }

  &-column comment.white {
    border-inline-start: 3px solid;
  }

  &-column comment.black {
    border-inline-end: 3px solid;
    overflow-x: hidden;
  }

  &-column comment.inaccuracy {
    border-color: $c-inaccuracy;
  }

  &-column comment.mistake {
    border-color: $c-mistake;
  }

  &-column comment.blunder {
    border-color: $c-blunder;
  }

  &-column comment.undefined {
    border-color: #66558c;
  }

  line comment {
    font-size: 90%;
  }

  &-column line comment {
    display: inline;
    color: $c-font-dim;
    word-wrap: break-word;
    padding: 0 5px 0 3px;
    vertical-align: top;
  }

  line comment .by {
    font-size: 1em;
    vertical-align: top;
  }

  lines {
    display: block;
    margin-top: 2px;
    margin-inline-start: 6px;
    margin-bottom: 0.8em;
    padding-inline-start: 2px;
  }

  > interrupt > lines {
    margin-inline-start: 0px;
  }

  lines.single {
    border-inline-start: none;
  }

  lines:last-child {
    margin-bottom: 0;
  }

  line {
    display: block;
    padding-inline-start: 7px;
    position: relative;
  }

  &-column line {
    margin: 2px 0;
  }

  line > branch {
    border-inline-start: 2px solid $c-border;
    margin-inline-start: -9px;
    position: absolute;
    width: 8px;
    height: 100%;
  }

  line:last-child > branch,
  line.expand > branch {
    height: calc(0.8em + 2px);
  }

  line > branch::before {
    margin-top: 0.8em;
    content: ' ';
    border-top: 2px solid $c-border;
    position: absolute;
    width: 7px;
    height: 6px;
  }

  &-column line > branch {
    margin-top: -2px;
    height: calc(100% + 2px);
  }

  lines lines move {
    font-size: 13px;
  }

  lines lines {
    margin-inline-start: 1px;
  }

  lines lines:last-child {
    margin-bottom: 0;
  }

  line.expand > a {
    color: $c-font-dim;
  }

  line.expand > a:hover {
    color: $c-font;
  }

  inline {
    display: inline;
    font-style: italic;
    font-size: 0.9em;
    opacity: 0.8;
  }

  inline::before,
  inline::after {
    vertical-align: 0.4em;
    opacity: 0.7;
    font-size: 0.9em;
  }

  inline::before {
    content: '(';
    margin-inline-start: 2px;
  }

  inline::after {
    content: ')';
    margin-inline-end: 2px;
  }

  &-inline inline::before,
  &-inline inline::after {
    vertical-align: 0.7em;
  }

  .conceal {
    opacity: 0.4;
  }

  .hide {
    display: none;
  }
}

